--- a/extensions/kafka-client/deployment/src/main/resources/dev-templates/embedded.html
+++ b/extensions/kafka-client/deployment/src/main/resources/dev-templates/embedded.html
@@ -1,3 +1,3 @@
-  <a href="{config:http-path('quarkus.kafka-client.ui.root-path')}/" class="badge badge-light">
+  <a href="{urlbase}/kafka-dev-ui" class="badge badge-light">
   <i class="fa fa-project-diagram fa-fw"></i>
   Kafka UI</a>
